Tests/DependencyInjection/Fixtures/annotations/inject/invalid/FooClassInvalid2.php
<?php
/** @Service */
class FooClassInvalid2
{
    /** @Inject("foo") */
    public function setDependencies($fooService, $barService)
    {
    }
}
